# pyrstat

./: .gitignore  README.md  pyproject.toml
examples/: test.py  test_multipletimeseries.py  testtimeseries.py
pyrstat/: __init__.py  core.py  multivariate_timeseries.py  univariate_timeseries.py
